<resources>
    <string name="app_name">Pilgrim Hajj Wallet</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">8FqS2oYV1aJ3xbRREYQmllFbyQm62y48gWKjyLWQ</string>
    <string name="back4app_client_key">kiNTbjmmaINu4tPyYM8DqXTZWSkycBXDA1IUFLID</string>
    <string name="hajj_wallet">Hajj Wallet</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_filter">Filter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_cashOut">Cash Out</string>
    <string name="email_address">Email Address</string>
    <string name="crn_number">CRN Number</string>
    <string name="remember_me">Remember me</string>
    <string name="login_to_account">Login to Account</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="sign_up_account">Sign Up Account</string>
    <string name="shop_name">Shop Name</string>
    <string name="location">Location</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="metre">m</string>

    <string name="search">Search</string>

    <string name="profile">Profile</string>
    <string name="qr_scanner">QR Scanner</string>


    <string name="scan_vendor_qr">Scan vendor QR code</string>
    <string name="purchase">Purchase</string>
    <string name="welcome_to">Welcome to</string>
    <string name="no_vendor">No such vendor with this QR code</string>
    <string name="wrong_user_data">Wrong username or password</string>
    <string name="required_field">Required field</string>
    <string name="password_is_numbers">Password can\'t be only numbers</string>
    <string name="password_is_short">Password must be at least 8 letters</string>

    <string name="password_doesnt_match">Passwords doesn\'t match</string>

    <string name="error">Oops! Something went wrong</string>
    <string name="image_error">Can\'t upload the image</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="nationality">Nationality</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="uploading">Uploading ...</string>
    <string name="creating_account">Creating you account ...</string>
    <string name="no_vendors_yet">No vendors around you yet</string>
    <string name="done">Done</string>
    <string name="amount_of_money_to_be_transfared">Amount of money</string>
    <string name="pin_code">Pin Code</string>
    <string name="transfer">Transfer</string>
    <string name="navigate">Navigate</string>
    <string name="your_balance_is">Your Balance is</string>
    <string name="create_an_account">Create an Account</string>
    <string name="you_don_t_have_a_wallet_yet">You don\'t have a wallet yet</string>
    <string name="my_wallet">My Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Country</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="currency">Currency</string>
    <string name="ssn_last_numbers">SSN Last Numbers</string>
    <string name="dob_day">Dob Day</string>
    <string name="dob_month">Dob Month</string>
    <string name="dob_year">Dob Year</string>
    <string name="create_wallet_successful">Wallet created successfully</string>
    <string name="charge_wallet">Charge Wallet</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="card_number">Card Number</string>
    <string name="expire_month">Expire Month</string>
    <string name="expire_year">Expire Year</string>
    <string name="cvc">CVC</string>
    <string name="amount">Amount</string>
    <string name="charge">Charge</string>

    <string name="charged_succesfully">Charged Successfully</string>
    <string name="transactions">transactions</string>
    <string name="no_transactions_yet">No transactions yet</string>
    <string name="more_than_doller">Amount must be more than a dollar</string>
</resources>
