<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/logo"
        style="@style/logoImageStyle"
        android:src="@drawable/hafezah_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/country"
        style="@style/InputTextField"
        android:layout_marginTop="32dp"
        android:text="US"
        android:drawableEnd="@drawable/ic_flag"
        android:hint="@string/country"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/bank_name"
        style="@style/InputTextField"
        android:layout_marginTop="16dp"
        android:text="STRIPE TEST BANK"
        android:hint="@string/bank_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <EditText
        android:id="@+id/account_number"
        style="@style/InputTextField"
        android:layout_marginTop="16dp"
        android:hint="@string/account_number"
        android:text="000123456789"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_name" />

    <EditText
        android:id="@+id/routing_number"
        style="@style/InputTextField"
        android:layout_marginTop="16dp"
        android:hint="@string/routing_number"
        android:inputType="number"
        android:text="110000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_number" />

    <EditText
        android:id="@+id/currency"
        style="@style/InputTextField"
        android:layout_width="match_parent"
        android:text="usd"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/currency"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routing_number" />


</androidx.constraintlayout.widget.ConstraintLayout>