<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".chargeWallet.ChargeWalletActivity">

    <androidx.cardview.widget.CardView
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/card_number"
                style="@style/InputTextField"
                android:hint="@string/card_number"
                android:inputType="number"
                android:text="4242424242424242"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/exp_mon"
                style="@style/InputTextField"
                android:layout_marginTop="16dp"
                android:hint="@string/expire_month"
                android:inputType="number"
                android:text="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number" />

            <EditText
                android:id="@+id/exp_year"
                style="@style/InputTextField"
                android:layout_marginTop="16dp"
                android:hint="@string/expire_year"
                android:inputType="number"
                android:text="2020"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exp_mon" />

            <EditText
                android:id="@+id/cvc"
                style="@style/InputTextField"
                android:layout_marginTop="16dp"
                android:hint="@string/cvc"
                android:inputType="text"
                android:text="123"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exp_year" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/darkBlue"
                app:layout_constraintTop_toBottomOf="@+id/cvc" />

            <EditText
                android:id="@+id/amount"
                style="@style/InputTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:drawableEnd="@drawable/dollar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
                android:id="@+id/currency"
                style="@style/InputTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/currency"
                android:inputType="text"
                android:text="usd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/amount"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
                android:id="@+id/pin_code"
                style="@style/InputTextField"
                android:layout_marginTop="16dp"
                android:hint="@string/pin_code"
                android:inputType="numberPassword"
                android:text="1234"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currency" />


            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/chargeWalletButton"
                style="@style/primary_btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_background"
                android:text="@string/charge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_code" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>